--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "firebase": "^8.1.1",
+    "firebase-tools": "^9.2.2",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.0.5",
     "vue": "^3.0.0",
